<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    android:orientation="vertical"
    tools:context=".Activity.LoginActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_text"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"/>
    </android.support.v7.widget.Toolbar>
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        tools:srcCompat="@tools:sample/backgrounds/scenic[19]" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/ic_login"
        android:drawablePadding="8dp"
        android:text="Login"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/login_email_id"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/e_mail_hint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/login_password_id"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_email_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="10dp" />

    <ProgressBar
        android:id="@+id/login_progress_bar_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

    <Button
        android:id="@+id/login_button_id"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_password_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:ems="10"
        android:text="@string/login_text"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/login_forget_pass_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_button_id"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="Forget password?" />

    <TextView
        android:id="@+id/not_registered_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="4dp"
        android:text="@string/not_registered_yet" />

    <TextView
        android:id="@+id/register_text_view_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="4dp"
        android:layout_toEndOf="@+id/not_registered_id"
        android:text="@string/click_here"
        android:textStyle="italic" />


</RelativeLayout>